--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -323,6 +323,9 @@
     </div>
   </div>
 </main>
+<hr>
+<app-server></app-server>
+<app-servers></app-servers>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
