--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,11 @@
 <div class="container">
-    <p>My name is {{name}}.</p>
+    <label>Server Name</label>
+    <input type="text" class="from-control" (input)="OnEventBinding($event)">
+    <p>{{serverName}}</p>
+    <p>My name is {{name}}!</p>
     <p>{{methodTesting()}}</p>
+    <button class="btn btn-primary" [disabled]="!allowNewServers" (click)="OnActivateServer()">Click me</button>
+    <br>
+    <p [innerText]="allowNewServers"></p>
+    <p [innerText]="OnActive"></p>
 </div>
