--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <label>Server Name</label>
-    <input type="text" class="from-control" (input)="OnEventBinding($event)">
+    <!-- <input type="text" class="from-control" (input)="OnEventBinding($event)"> -->
+    <input type="text" class="form-control"  [(ngModel)]="serverName">
     <p>{{serverName}}</p>
     <p>My name is {{name}}!</p>
     <p>{{methodTesting()}}</p>
