--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,4 +9,10 @@
     <br>
     <p [innerText]="allowNewServers"></p>
     <p [innerText]="OnActive"></p>
+
+    <input type="text" class="form-control" [(ngModel)]="serverName">
+    <button class="btn btn-primary" [disabled]="!allowNewServers" (click)="OncreateServer()">Add Server</button>
+
+    <p *ngIf="serverCreated" >Server was created successfully, the name is {{serverName}}.</p>
+
 </div>
