--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -13,6 +13,8 @@
     <input type="text" class="form-control" [(ngModel)]="serverName">
     <button class="btn btn-primary" [disabled]="!allowNewServers" (click)="OncreateServer()">Add Server</button>
 
-    <p *ngIf="serverCreated" >Server was created successfully, the name is {{serverName}}.</p>
-
+    <p *ngIf="serverCreated; else noServer" >Server was created successfully, the name is {{serverName}}.</p>
+    <ng-template #noServer>
+        <p>No Server was created!</p>
+    </ng-template>
 </div>
